Quietening down some IDE warnings on the bits of code I added